Incomplete - task : Create a preference pane
Complete - task : Generalize analysis depth 

Complete - task : Calculate pattern statistics

--- a/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
@@ -8,5 +8,19 @@
             contentType="java">
       </provider>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="edu.ohio_state.cse.khatchad.fraglight.ui.preferences.PreferencePage"
+            id="edu.ohio_state.cse.khatchad.fraglight.ui.preferences.PreferencePage"
+            name="Fraglight">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="edu.ohio_state.cse.khatchad.fraglight.ui.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 
 </plugin>
