--- a/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
@@ -24,12 +24,8 @@
    </extension>
    <extension
          point="org.eclipse.ui.views">
-      <category
-            id="edu.ohio_state.cse.khatchad.fraglight.ui.pointcutchangepredictionview"
-            name="Sample Category">
-      </category>
       <view
-            category="edu.ohio_state.cse.khatchad.fraglight.ui.pointcutchangepredictionview"
+            category="org.eclipse.ajdt.ui.cat"
             class="edu.ohio_state.cse.khatchad.fraglight.ui.views.PointcutChangePredictionView"
             icon="icons/sample.gif"
             id="edu.ohio_state.cse.khatchad.fraglight.ui.views.PointcutChangePredictionView"
