--- a/edu.ohio_state.cse.khatchad.fraglight.ui/.settings/org.eclipse.jdt.core.prefs
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,8 @@
-#Fri Mar 19 17:30:22 EDT 2010
+#Mon Jan 03 15:08:40 EST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
