Incomplete - task : Evaluate fraglight

--- a/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               bin/
+               bin/,\
+               lib/guava-r07.jar
 src.includes = .classpath,\
                .project,\
                .settings/,\
