--- a/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               lib/guava-r07.jar
+               lib/guava-r07.jar,\
+               lib/jdom.jar
