--- a/edu.ohio_state.cse.khatchad.fraglightevaluator/.classpath
+++ b/edu.ohio_state.cse.khatchad.fraglightevaluator/.classpath
@@ -8,6 +8,10 @@
 			<attribute name="javadoc_location" value="http://guava-libraries.googlecode.com/svn/trunk/javadoc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jdom.jar"/>
+	<classpathentry kind="lib" path="lib/jdom.jar" sourcepath="lib/jdom-src.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/edu.ohio_state.cse.khatchad.fraglightevaluator/lib/jdom-doc.jar!/apidocs"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
