--- a/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                lib/guava-r07.jar,\
-               lib/jdom.jar
+               lib/jdom.jar,\
+               lib/opencsv-2.2.jar
