--- a/edu.ohio_state.cse.khatchad.fraglightevaluator/.classpath
+++ b/edu.ohio_state.cse.khatchad.fraglightevaluator/.classpath
@@ -19,5 +19,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/mail-1.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-8.3-603.jdbc3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
