--- a/trunk/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
+++ b/trunk/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                bin/,\
-               lib/guava-r07.jar
+               lib/guava-r07.jar,\
+               OSGI-INF/l10n/bundle.properties
 src.includes = .classpath,\
                .project,\
                .settings/,\
