--- a/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
@@ -8,7 +8,8 @@ bin.includes = META-INF/,\
                lib/drools-core-4.0.4.jar,\
                lib/jdom.jar,\
                lib/mvel14-1.2.21.jar,\
-               lib/antlr-runtime-3.0.jar
+               lib/antlr-runtime-3.0.jar,\
+               OSGI-INF/l10n/bundle.properties
 src.includes = .classpath,\
                .project,\
                .settings/,\
