--- a/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/plugin.xml
@@ -13,7 +13,7 @@
       <page
             class="edu.ohio_state.cse.khatchad.fraglight.ui.preferences.PreferencePage"
             id="edu.ohio_state.cse.khatchad.fraglight.ui.preferences.PreferencePage"
-            name="Fraglight">
+            name="%page.name">
       </page>
    </extension>
    <extension
@@ -29,7 +29,7 @@
             class="edu.ohio_state.cse.khatchad.fraglight.ui.views.PointcutChangePredictionView"
             icon="icons/fraglight.gif"
             id="edu.ohio_state.cse.khatchad.fraglight.ui.views.PointcutChangePredictionView"
-            name="Pointcut Change Prediction View">
+            name="%view.name">
       </view>
    </extension>
    <extension
