--- a/trunk/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
+++ b/trunk/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
@@ -5,11 +5,17 @@ bin.includes = META-INF/,\
                plugin.xml,\
                bin/,\
                lib/guava-r07.jar,\
-               OSGI-INF/l10n/bundle.properties
+               OSGI-INF/l10n/bundle.properties,\
+               icons/,\
+               lib/logging.properties
 src.includes = .classpath,\
                .project,\
                .settings/,\
                META-INF/,\
                build.properties,\
                plugin.xml,\
-               src/
+               src/,\
+               OSGI-INF/,\
+               icons/,\
+               lib/,\
+               contexts.xml
