--- a/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
@@ -16,7 +16,8 @@ src.includes = .classpath,\
                META-INF/,\
                build.properties,\
                lib/,\
-               src/
+               src/,\
+               OSGI-INF/
 jars.extra.classpath = lib/drools-compiler-4.0.4.jar,\
                        lib/drools-core-4.0.4.jar,\
                        lib/jdom.jar,\
