--- a/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglight.core/build.properties
@@ -6,19 +6,13 @@ bin.includes = META-INF/,\
                lib/,\
                lib/drools-compiler-4.0.4.jar,\
                lib/drools-core-4.0.4.jar,\
-               lib/jdom.jar,\
+               lib/jdom-2.0.6.jar,\
                lib/mvel14-1.2.21.jar,\
                lib/antlr-runtime-3.0.jar,\
-               OSGI-INF/l10n/bundle.properties
-src.includes = .classpath,\
-               .project,\
-               .settings/,\
-               META-INF/,\
-               build.properties,\
-               lib/,\
-               src/,\
+               OSGI-INF/l10n/bundle.properties,\
                OSGI-INF/
+src.includes = lib/
 jars.extra.classpath = lib/drools-compiler-4.0.4.jar,\
                        lib/drools-core-4.0.4.jar,\
-                       lib/jdom.jar,\
+                       lib/jdom-2.0.6.jar,\
                        lib/mvel14-1.2.21.jar
