--- a/edu.ohio_state.cse.khatchad.fraglight.core/.classpath
+++ b/edu.ohio_state.cse.khatchad.fraglight.core/.classpath
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/drools-core-4.0.4.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://downloads.jboss.com/drools/docs/4.0.7.19894.GA/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="lib/drools-compiler-4.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/mvel14-1.2.21.jar"/>
-	<classpathentry kind="lib" path="lib/antlr-runtime-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom-2.0.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/jdom.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/drools-compiler-4.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/drools-core-4.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mvel14-1.2.21.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
