--- a/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglightevaluator/build.properties
@@ -5,6 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                lib/guava-r07.jar,\
-               lib/jdom.jar,\
+               lib/jdom-2.0.6.jar,\
                lib/opencsv-2.2.jar,\
                lib/mail-1.4.3.jar
