--- a/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
+++ b/edu.ohio_state.cse.khatchad.fraglight.ui/build.properties
@@ -7,15 +7,8 @@ bin.includes = META-INF/,\
                lib/guava-r07.jar,\
                OSGI-INF/l10n/bundle.properties,\
                icons/,\
-               lib/logging.properties
-src.includes = .classpath,\
-               .project,\
-               .settings/,\
-               META-INF/,\
-               build.properties,\
-               plugin.xml,\
-               src/,\
-               OSGI-INF/,\
-               icons/,\
+               lib/logging.properties,\
+               OSGI-INF/
+src.includes = icons/,\
                lib/,\
                contexts.xml
